# pytest-django

./: .coveragerc  .editorconfig  .editorconfig-checker.json  .git-blame-ignore-revs  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  Makefile  README.markdown  README.rst  conftest.py  generate_configurations.py  pip-selfcheck.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: zizmor.yml
.github/workflows/: deploy.yml  main.yml
docs/: Makefile  changelog.rst  command_line_options.rst  conf.py  configuring_django.rst  contributing.rst  database.rst  faq.rst  helpers.rst  index.rst  make.bat  managing_python_path.rst  tutorial.rst  usage.rst
docs/_ext/: pytestdocs.py
docs/_templates/: sidebarintro.html
pytest_django/: __init__.py  asserts.py  client.py  compat.py  db_retry.py  db_reuse.py  deprecated.py  django_compat.py  fixtures.py  funcargs.py  lazy_django.py  live_server_helper.py  marks.py  migrations.py  plugin.py  runner.py  utils.py  verbose_live_server.py
pytest_django_test/: compat.py  db_helpers.py  db_router.py  settings_base.py  settings_mysql.py  settings_mysql_innodb.py  settings_mysql_myisam.py  settings_postgres.py  settings_sqlite.py  settings_sqlite_file.py  urls.py  urls_overridden.py
pytest_django_test/app/: models.py  views.py
pytest_django_test/app/fixtures/: items.json
pytest_django_test/app/migrations/: 0001_initial.py  0002_seed_data.py
tests/: compat.py  conftest.py  db_helpers.py  helpers.py  settings.py  settings_base.py  settings_custom_user_model.py  settings_mysql.py  settings_mysql_innodb.py  settings_mysql_myisam.py  settings_postgres.py  settings_sqlite.py  settings_sqlite_file.py  test_asserts.py  test_async_db.py  test_bad_environment.py  test_classbasedtests.py  test_custom_runner.py  test_database.py  test_db_access_in_repr.py  test_db_debug.py  test_db_name.py  test_db_reuse.py  test_db_setup.py  test_db_thread_safeguards.py  test_django_classy_settings.py  test_django_compat.py  test_django_configurations.py  test_django_inheritance.py  test_django_settings_module.py  test_doctest.txt  test_environment.py  test_fixtures.py  test_funcargs.py  test_initialization.py  test_isolate_apps.py  test_liveserver.py  test_manage_py_scan.py  test_namespaces.py  test_plugin.py  (+15 more)
tests/app/: models.py
tests/custom_user/: models.py
