[metadata]
name = pytest-django
description = A Django plugin for pytest.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Andreas Pelme
author_email = andreas@pelme.se
maintainer = Andreas Pelme
maintainer_email = andreas@pelme.se
url = https://pytest-django.readthedocs.io/
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Testing
project_urls =
    Source=https://github.com/pytest-dev/pytest-django
    Changelog=https://pytest-django.readthedocs.io/en/latest/changelog.html

[options]
packages = pytest_django
python_requires = >=3.5
setup_requires = setuptools_scm>=1.11.1
install_requires = pytest>=5.4.0

[options.entry_points]
pytest11 =
    django = pytest_django.plugin

[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme
testing =
    Django
    django-configurations>=2.0

[tool:pytest]
# --strict-markers: error on using unregistered marker.
# -ra: show extra test summary info for everything.
addopts = --strict-markers -ra
DJANGO_SETTINGS_MODULE = pytest_django_test.settings_sqlite_file
testpaths = tests

[wheel]
universal = 0

[flake8]
# W503 line break before binary operator
ignore = W503
max-line-length = 99
exclude = lib/,src/,docs/,bin/

[isort]
forced_separate = tests,pytest_django,pytest_django_test
