[metadata]
name = pytest-django
description = A Django plugin for pytest.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Andreas Pelme
author_email = andreas@pelme.se
maintainer = Andreas Pelme
maintainer_email = andreas@pelme.se
url = https://pytest-django.readthedocs.io/
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Testing
project_urls =
    Source=https://github.com/pytest-dev/pytest-django
    Changelog=https://pytest-django.readthedocs.io/en/latest/changelog.html

[options]
packages = pytest_django
python_requires = >=3.8
setup_requires = setuptools_scm>=5.0.0
install_requires = pytest>=7.0.0
zip_safe = no

[options.entry_points]
pytest11 =
    django = pytest_django.plugin

[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme
testing =
    Django
    django-configurations>=2.0

[options.package_data]
pytest_django = py.typed

[flake8]
# W503 line break before binary operator
ignore = W503
max-line-length = 99
exclude = lib/,src/,docs/,bin/,pytest_django/_version.py

[isort]
forced_separate = tests,pytest_django,pytest_django_test
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 79
multi_line_output = 5
lines_after_imports = 2
extend_skip = pytest_django/_version.py
